--- a/vignettes/Country_comparison.Rmd
+++ b/vignettes/Country_comparison.Rmd
@@ -25,13 +25,16 @@ suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(cowplot))
 library(mlgts)
 library(malariasimulation)
+library(didehpc)
 
-# if mlgts has not been previously installed, see the directions in the DIDE drive: /malaria_model_compare/comparisons_getting_started.R
+# if mlgts has not been previously installed, see the directions in the DIDE drive: 
+# /malaria_model_compare/comparisons_getting_started.R
+# here, I: = DIDE shared drive
 knitr::opts_knit$set(root.dir="I:/malaria_model_compare")
 setwd("I:/malaria_model_compare")
 source("./R/run_site.R")
 
-# Load all site file data (do not share)
+# load all site file data (do not share)
 all_sites <- readRDS("./data/GTS2020_sites_fitted.RDS")
 ```
 
@@ -39,15 +42,18 @@ all_sites <- readRDS("./data/GTS2020_sites_fitted.RDS")
 
 To run the old model under generic settings, we can transform country-specific values to meet the following criteria: 
 
-1. Set exponential demography
-2. Set no population growth
-3. Set no resistance
-4. Set NULL location (no seasonality)
+1. exponential demography
+2. no population growth
+3. no resistance
+4. NULL location (no seasonality)
+
+We can then plot annualized clinical incidence (0-5 years) and prevalence (2-10 years) across time. In the plots below, solid lines indicate exact model estimates and dashed lines indicate smoothed estimates.
 
 ```{r, fig.height = 5, fig.width = 7}
 setwd("I:/malaria_model_compare")
-# get exponential demography
-generic_demog <- read.table("data/exp_demog.txt")
+
+# get demography
+generic_demog <- read.table("data/flat_demog.txt")
 colnames(generic_demog) <- colnames(all_sites$demog[[1]])
 replace_demog <- function(x){
   generic_demog
@@ -85,7 +91,7 @@ standard_vectors <- function(x){
   return(x)
 }
 
-# choose a single site and modify parameters to = null values
+# choose a single site and modify parameters to equal null values
 test_site <- all_sites[1, ] %>%
   # alter the population, demography, resistance, etc.
   mutate(pop = purrr::map(pop, standard_pop),
@@ -119,17 +125,20 @@ plot_grid(inc_plots,prev_plots)
 
 # New model
 
+To run the new model under generic settings, we can start with the default parameters included in the malariasimulation package where all interventions are turned off. We can then set a run time, population, mosquito density, etc. to match our old model stipulations above.
+
 ```{r, fig.height = 5, fig.width = 7}
 year <- 365
-warmup <- 10 * year
+warmup <- 10 * year # not used for now
 sim_length <- 19 * year
-population <- 1000
+population <- 10000 # match run_site() documentation
 
-params <- malariasimulation::get_parameters(
+# setting paramaters for individual mosquitoes
+params_ON <- malariasimulation::get_parameters(
   list(
     human_population = population,
-    individual_mosquitoes = FALSE,
-    n_heterogeneity_groups = 5,
+    individual_mosquitoes = TRUE,
+    mosquito_limit = 150000,
     model_seasonality = F,
     total_M = 10 * population,
     clinical_incidence_rendering_min_ages = 0,
@@ -137,21 +146,45 @@ params <- malariasimulation::get_parameters(
   )
 )
 
-output2 <- malariasimulation::run_simulation(sim_length, params) %>% 
-  mutate(t=timestep/365+2000) %>% # assigning year
+# setting parameters for no individual mosquitoes
+params_OFF <- malariasimulation::get_parameters(
+  list(
+    human_population = population,
+    individual_mosquitoes = FALSE,
+    mosquito_limit = 150000,
+    model_seasonality = F,
+    total_M = 10 * population,
+    clinical_incidence_rendering_min_ages = 0,
+    clinical_incidence_rendering_max_ages = 5 * year
+  )
+)
+
+run_nmodel <- function(setparams){
+  run_simulation(sim_length, setparams) %>% 
+  mutate(t=timestep/365+2000, # assigning year
+          # filling in NAs with 0
+         clin_inc_0_1825=case_when(!is.na(clin_inc_0_1825)~clin_inc_0_1825,
+                                   is.na(clin_inc_0_1825)~0)) %>% 
   group_by(grp=rep(row_number(), length.out=n(), each=30)) %>% # summarize by month
   summarize(t=mean(t),
          prev_2_10=mean(pv_730_3650,na.rm=T),
-         clin_inc_0_5=mean(clin_inc_0_1825,na.rm=T))
+         clin_inc_0_5=mean(clin_inc_0_1825,na.rm=T)*year)
+}
+
+output2 <- run_nmodel(params_ON)
+
+output3 <- run_nmodel(params_OFF)
 
 # plot
 inc_plots <- ggplot(output2) + 
   geom_line(aes(x = t, y = clin_inc_0_5)) +
+  geom_line(data=output3,aes(x = t, y = clin_inc_0_5),lty=2) +
   labs(x="Time",y="Clinical incidence 0-5") +
   theme_bw()
 
 prev_plots <- ggplot(output2) + 
   geom_line(aes(x = t, y = prev_2_10)) +
+  geom_line(data=output3,aes(x = t, y = prev_2_10),lty=2) +
   labs(x="Time",y="Prevalence 2-10") +
   theme_bw()
 
@@ -169,10 +202,9 @@ Now try turning interventions on/off one at a time:
 * SMC
 * MDA
 * RTS,S
+* individual mosquitoes turned on and off
 
-We will assess changes in prevalence and cumulative incidence for the whole population and for children (prev 2-10 years, CI 0-5 years)
-
-* new model with individual mosquitoes turned on and off
+We will assess changes in prevalence and cumulative incidence for each intervention. Solid lines represent model outputs with interventions, and dashed lines represent model outputs without any interventions.
 
 ```{r, fig.height = 5, fig.width = 8, message=FALSE}
 # old
@@ -180,10 +212,13 @@ output1 <- output1 %>% mutate(model="mlgts")
 
 # new
 output2 <- output2 %>%
-  mutate(model="malariasimulation")
+  mutate(model="malariasimulation-ON")
+
+output3 <- output3 %>%
+  mutate(model="malariasimulation-OFF")
 
 # join old and new model results into a single data set
-output_orig <- full_join(output1,output2) %>%
+output_orig <- full_join(output1,full_join(output2,output3)) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -210,24 +245,19 @@ test_site2$interventions[[1]]$prop_act <- c(rep(0,4),rep(1,15))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
   
 # new
-params2 <- params %>% 
+IM_ON <- params_ON %>% 
   set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>% 
   set_clinical_treatment(drug=1,time=5*year,coverage=0.8)
 
-run_nmodel <- function(setparams){
-  run_simulation(sim_length, setparams) %>% 
-  mutate(t=timestep/365+2000) %>% # assigning year
-  group_by(grp=rep(row_number(), length.out=n(), each=30)) %>% # summarize by month
-  summarize(t=mean(t),
-         prev_2_10=mean(pv_730_3650,na.rm=T),
-         clin_inc_0_5=mean(clin_inc_0_1825,na.rm=T),
-         model="malariasimulation")
-}
+IM_OFF <- params_OFF %>% 
+  set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>% 
+  set_clinical_treatment(drug=1,time=5*year,coverage=0.8)
 
-outputB <- run_nmodel(params2) 
+outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
+outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
   
 # join old and new model results into a single data set
-output <- full_join(outputA,outputB) %>%
+output <- full_join(outputA,full_join(outputB,outputC)) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -259,13 +289,17 @@ test_site2$interventions[[1]]$net_type <- c(rep("pyrethroid",19))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-params2 <- params %>% 
+IM_ON <- params_ON %>% 
   set_bednets(time=5*year,coverage=0.8,retention=0.9)
 
-outputB <- run_nmodel(params2) 
+IM_OFF <- params_OFF %>% 
+  set_bednets(time=5*year,coverage=0.8,retention=0.9)
+
+outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
+outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,outputB) %>%
+output <- full_join(outputA,full_join(outputB,outputC)) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -284,13 +318,17 @@ test_site2$interventions[[1]]$irs_rounds <- c(rep(0,4),rep(1,15))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-params2 <- params %>% 
+IM_ON <- params_ON %>% 
   set_spraying(time=5*year,coverage=0.8)
 
-outputB <- run_nmodel(params2) 
+IM_OFF <- params_OFF %>% 
+  set_spraying(time=5*year,coverage=0.8)
+
+outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
+outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,outputB) %>%
+output <- full_join(outputA,full_join(outputB,outputC)) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -308,14 +346,19 @@ test_site2$interventions[[1]]$smc_rounds <- c(rep(0,4),rep(1,15))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-params2 <- params %>% 
+IM_ON <- params_ON %>% 
    set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
-  set_smc(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
+   set_smc(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
 
-outputB <- run_nmodel(params2) 
+IM_OFF <- params_OFF %>% 
+   set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
+   set_smc(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
+
+outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
+outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,outputB) %>%
+output <- full_join(outputA,full_join(outputB,outputC)) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -330,14 +373,19 @@ test_site2 <- test_site
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-params2 <- params %>% 
+IM_ON <- params_ON %>% 
   set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
   set_mda(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
 
-outputB <- run_nmodel(params2) 
+IM_OFF <- params_OFF %>% 
+  set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
+  set_mda(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
+
+outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
+outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,outputB) %>%
+output <- full_join(outputA,full_join(outputB,outputC)) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -353,46 +401,20 @@ outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="m
 
 # new
 # new
-params2 <- params %>% 
+IM_ON <- params_ON %>% 
   set_rtss(time=5*year,coverage=0.8,min_ages=0,max_ages=100,boosters=10*year ,booster_coverage=0)
 # can also set booster
 
-outputB <- run_nmodel(params2) 
+IM_OFF <- params_OFF %>% 
+  set_rtss(time=5*year,coverage=0.8,min_ages=0,max_ages=100,boosters=10*year ,booster_coverage=0)
+
+outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
+outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,outputB) %>%
+output <- full_join(outputA,full_join(outputB,outputC)) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
 plot_grid(inc_plots(output),prev_plots(output))
 ```
-
-## Individual mosquitoes
-```{r, fig.height = 5, fig.width = 8, message=FALSE}
-# old
-test_site2 <- test_site # no change to old model
-outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
-
-# new
-params2 <- get_parameters(
-  list(
-    human_population = population,
-    individual_mosquitoes = TRUE,
-    n_heterogeneity_groups = 5,
-    model_seasonality = F,
-    total_M = 10 * population,
-    clinical_incidence_rendering_min_ages = 0,
-    clinical_incidence_rendering_max_ages = 5 * year
-  )
-)
-
-outputB <- run_nmodel(params2) 
-
-# join old and new model results into a single data set
-output <- full_join(outputA,outputB) %>%
-  dplyr::select(t, prev_2_10, clin_inc_0_5, model)
-
-# plot
-plot_grid(inc_plots(output),prev_plots(output))
-```
-
