--- a/vignettes/Equilibrium.Rmd
+++ b/vignettes/Equilibrium.Rmd
@@ -137,7 +137,7 @@ ms_values <- readRDS("../inst/ms_values.rds")
 
 # creating a function for running the odin model given an assigned EIR value
 get_dmm <- function(eir) {
-  run_model_m_immunity(model = 'odin_model_m_immunity',
+  run_model(model = 'odin_model_ageprev',
                      time = period*year,
                      age = init_age,
                      #age = c(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75, 4, 4.25, 4.5, 4.75, 5, 7.5, 10, 15, 20, 30, 40, 50, 60, 70, 80),
