--- a/vignettes/Country_comparison.Rmd
+++ b/vignettes/Country_comparison.Rmd
@@ -30,8 +30,8 @@ library(didehpc)
 # if mlgts has not been previously installed, see the directions in the DIDE drive: 
 # /malaria_model_compare/comparisons_getting_started.R
 # here, I: = DIDE shared drive
-knitr::opts_knit$set(root.dir="I:/malaria_model_compare")
-setwd("I:/malaria_model_compare")
+knitr::opts_knit$set(root.dir="Z:/malaria_model_compare")
+setwd("Z:/malaria_model_compare")
 source("./R/run_site.R")
 
 # load all site file data (do not share)
@@ -50,7 +50,7 @@ To run the old model under generic settings, we can transform country-specific v
 We can then plot annualized clinical incidence (0-5 years) and prevalence (2-10 years) across time. In the plots below, solid lines indicate exact model estimates and dashed lines indicate smoothed estimates.
 
 ```{r, fig.height = 5, fig.width = 7}
-setwd("I:/malaria_model_compare")
+setwd("Z:/malaria_model_compare")
 
 # get demography
 generic_demog <- read.table("data/flat_demog.txt")
@@ -133,12 +133,11 @@ warmup <- 10 * year # not used for now
 sim_length <- 19 * year
 population <- 10000 # match run_site() documentation
 
-# setting paramaters for individual mosquitoes
-params_ON <- malariasimulation::get_parameters(
+# setting parameters for no individual mosquitoes
+params <- malariasimulation::get_parameters(
   list(
     human_population = population,
-    individual_mosquitoes = TRUE,
-    mosquito_limit = 150000,
+    individual_mosquitoes = FALSE,
     model_seasonality = F,
     total_M = 10 * population,
     clinical_incidence_rendering_min_ages = 0,
@@ -146,45 +145,41 @@ params_ON <- malariasimulation::get_parameters(
   )
 )
 
-# setting parameters for no individual mosquitoes
-params_OFF <- malariasimulation::get_parameters(
-  list(
-    human_population = population,
-    individual_mosquitoes = FALSE,
-    mosquito_limit = 150000,
-    model_seasonality = F,
-    total_M = 10 * population,
-    clinical_incidence_rendering_min_ages = 0,
-    clinical_incidence_rendering_max_ages = 5 * year
-  )
+vector_params <- gamb_params
+vector_params$Q0 <- test_site$vectors[[1]][[1, 'gamb_ss_Q0']]
+vector_params$phi_bednets <- test_site$vectors[[1]][[1, 'gamb_ss_Q_bed']]
+vector_params$phi_indoors <- test_site$vectors[[1]][[1, 'gamb_ss_Q_in']]
+
+params <- malariasimulation::set_species(
+  params,
+  list(vector_params),
+  proportions = 1
 )
 
 run_nmodel <- function(setparams){
   run_simulation(sim_length, setparams) %>% 
   mutate(t=timestep/365+2000, # assigning year
           # filling in NAs with 0
-         clin_inc_0_1825=case_when(!is.na(clin_inc_0_1825)~clin_inc_0_1825,
-                                   is.na(clin_inc_0_1825)~0)) %>% 
+         clin_inc_0_1825=case_when(!is.na(n_inc_clinical_0_1825)~n_inc_clinical_0_1825/n_0_1825,
+                                   is.na(n_inc_clinical_0_1825)~0),
+         pv_730_3650=n_detect_730_3650/n_730_3650
+         ) %>% 
   group_by(grp=rep(row_number(), length.out=n(), each=30)) %>% # summarize by month
   summarize(t=mean(t),
          prev_2_10=mean(pv_730_3650,na.rm=T),
          clin_inc_0_5=mean(clin_inc_0_1825,na.rm=T)*year)
 }
 
-output2 <- run_nmodel(params_ON)
-
-output3 <- run_nmodel(params_OFF)
+output2 <- run_nmodel(params)
 
 # plot
 inc_plots <- ggplot(output2) + 
   geom_line(aes(x = t, y = clin_inc_0_5)) +
-  geom_line(data=output3,aes(x = t, y = clin_inc_0_5),lty=2) +
   labs(x="Time",y="Clinical incidence 0-5") +
   theme_bw()
 
 prev_plots <- ggplot(output2) + 
   geom_line(aes(x = t, y = prev_2_10)) +
-  geom_line(data=output3,aes(x = t, y = prev_2_10),lty=2) +
   labs(x="Time",y="Prevalence 2-10") +
   theme_bw()
 
@@ -212,13 +207,10 @@ output1 <- output1 %>% mutate(model="mlgts")
 
 # new
 output2 <- output2 %>%
-  mutate(model="malariasimulation-ON")
-
-output3 <- output3 %>%
-  mutate(model="malariasimulation-OFF")
+  mutate(model="malariasimulation")
 
 # join old and new model results into a single data set
-output_orig <- full_join(output1,full_join(output2,output3)) %>%
+output_orig <- full_join(output1,output2) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -245,19 +237,14 @@ test_site2$interventions[[1]]$prop_act <- c(rep(0,4),rep(1,15))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
   
 # new
-IM_ON <- params_ON %>% 
+IM <- params %>% 
   set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>% 
   set_clinical_treatment(drug=1,time=5*year,coverage=0.8)
 
-IM_OFF <- params_OFF %>% 
-  set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>% 
-  set_clinical_treatment(drug=1,time=5*year,coverage=0.8)
-
-outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
-outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
+outputB <- run_nmodel(IM) %>% mutate(model="malariasimulation")
   
 # join old and new model results into a single data set
-output <- full_join(outputA,full_join(outputB,outputC)) %>%
+output <- full_join(outputA,outputB) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -289,17 +276,21 @@ test_site2$interventions[[1]]$net_type <- c(rep("pyrethroid",19))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-IM_ON <- params_ON %>% 
-  set_bednets(time=5*year,coverage=0.8,retention=0.9)
+IM <- params %>% 
+  set_bednets(
+    time=5*year,
+    coverage=0.8,
+    retention = 5 * year,
+    dn0 = matrix(.533, nrow=1, ncol=1),
+    rn = matrix(.56, nrow=1, ncol=1),
+    rnm = matrix(.24, nrow=1, ncol=1),
+    gamman = 2.64
+  )
 
-IM_OFF <- params_OFF %>% 
-  set_bednets(time=5*year,coverage=0.8,retention=0.9)
-
-outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
-outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
+outputB <- run_nmodel(IM) %>% mutate(model="malariasimulation")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,full_join(outputB,outputC)) %>%
+output <- full_join(outputA,outputB) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -318,17 +309,22 @@ test_site2$interventions[[1]]$irs_rounds <- c(rep(0,4),rep(1,15))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-IM_ON <- params_ON %>% 
-  set_spraying(time=5*year,coverage=0.8)
+IM <- params %>% 
+  set_spraying(
+    time=5*year,
+    coverage=0.8,
+    ls_theta = matrix(2.025, nrow=1, ncol=1),
+    ls_gamma = matrix(-0.009, nrow=1, ncol=1),
+    ks_theta = matrix(-2.222, nrow=1, ncol=1),
+    ks_gamma = matrix(0.008, nrow=1, ncol=1),
+    ms_theta = matrix(-1.232, nrow=1, ncol=1),
+    ms_gamma = matrix(-0.009, nrow=1, ncol=1)
+  )
 
-IM_OFF <- params_OFF %>% 
-  set_spraying(time=5*year,coverage=0.8)
-
-outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
-outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
+outputB <- run_nmodel(IM) %>% mutate(model="malariasimulation")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,full_join(outputB,outputC)) %>%
+output <- full_join(outputA,outputB) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -346,19 +342,14 @@ test_site2$interventions[[1]]$smc_rounds <- c(rep(0,4),rep(1,15))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-IM_ON <- params_ON %>% 
+IM <- params %>% 
    set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
    set_smc(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
 
-IM_OFF <- params_OFF %>% 
-   set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
-   set_smc(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
-
-outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
-outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
+outputB <- run_nmodel(IM) %>% mutate(model="malariasimulation")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,full_join(outputB,outputC)) %>%
+output <- full_join(outputA,outputB) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -373,19 +364,14 @@ test_site2 <- test_site
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-IM_ON <- params_ON %>% 
+IM <- params %>% 
   set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
   set_mda(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
 
-IM_OFF <- params_OFF %>% 
-  set_drugs(list(AL_params, SP_AQ_params, DHA_PQP_params)) %>%
-  set_mda(drug=1,time=5*year,coverage=0.8,min_age=0,max_age=100)
-
-outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
-outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
+outputB <- run_nmodel(IM) %>% mutate(model="malariasimulation")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,full_join(outputB,outputC)) %>%
+output <- full_join(outputA,outputB) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
@@ -400,19 +386,22 @@ test_site2$interventions[[1]]$rtss <- c(rep(0,4),rep(0.8,15))
 outputA <- purrr::pmap(test_site2, run_site) %>% bind_rows() %>% mutate(model="mlgts")
 
 # new
-# new
-IM_ON <- params_ON %>% 
-  set_rtss(time=5*year,coverage=0.8,min_ages=0,max_ages=100,boosters=10*year ,booster_coverage=0)
+IM <- params %>% 
+  set_mass_rtss(
+    time=5*year,
+    coverage=0.8,
+    min_ages=0,
+    max_ages=100,
+    boosters=10*year,
+    booster_coverage=0,
+    min_wait = 0
+  )
 # can also set booster
 
-IM_OFF <- params_OFF %>% 
-  set_rtss(time=5*year,coverage=0.8,min_ages=0,max_ages=100,boosters=10*year ,booster_coverage=0)
-
-outputB <- run_nmodel(IM_ON) %>% mutate(model="malariasimulation-ON")
-outputC <- run_nmodel(IM_OFF) %>% mutate(model="malariasimulation-OFF")
+outputB <- run_nmodel(IM) %>% mutate(model="malariasimulation")
 
 # join old and new model results into a single data set
-output <- full_join(outputA,full_join(outputB,outputC)) %>%
+output <- full_join(outputA,outputB) %>%
   dplyr::select(t, prev_2_10, clin_inc_0_5, model)
 
 # plot
